--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@google-pay/button-element": "^3.0.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "mdbvue": "^6.7.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
